# philomena

./: .dialyzer_ignore.exs  .dockerignore  .editorconfig  .formatter.exs  .gitignore  .prettierignore  .typos.toml  .zshrc  API.md  CHARACTERIZATION-TESTS.md  CLAUDE.md  DESIGN.md  KNOWN-ODDITIES.md  README.md  TIPS.md  docker-compose.yml  mix.exs  openapi.yaml  package-lock.json  package.json  post-receive  webp_support.patch
.claude/agents/: code-agent.md  review-agent.md  test-agent.md
.devcontainer/: .gitignore  Dockerfile  devcontainer-feature.json  devcontainer.json  docker-compose.yml  docker-init.sh  init-container.sh  init-host.sh  install.sh
.devcontainer/codespace/: devcontainer.json
.devcontainer/common/: .zshrc  docker-compose.yml  init-container.sh  init-host.sh
.devcontainer/local/: devcontainer.json  docker-compose.yml
.devcontainer/shell/: .zshrc  oh-my-zsh.sh
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  elixir.yml  generator-generic-ossf-slsa3-publish.yml  production.yml
assets/: .browserslistrc  .eslintrc.yml  .prettierrc.yml  .stylelintrc.yml  eslint.config.js  jest.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  tsconfig.test.json  vite.config.ts  watch.js  webpack.config.js
assets/css/: application.css  application.scss
assets/js/: ContextMenu.js  app.js  app.ts  autocomplete.js  booru.js  booru.ts  boorujs.js  boorujs.ts  burger.ts  captcha.ts  clone.js  fp.js  (+47 more)
config/: aggregation.json  config.exs  dev.exs  footer.json  prod.exs  quick_tag_table.json  releases.exs  runtime.exs  tag.json  test.exs
lib/: philomena_web.ex
native/broker/: Cargo.toml
native/broker/src/: broker_client.rs  broker_server.rs  command_client.rs  command_server.rs  lib.rs
native/philomena/: Cargo.toml
native/philomena/mediaproc/: Cargo.toml
native/philomena/mediaproc/src/: client.rs  lib.rs
native/philomena/mediaproc_client/: Cargo.toml
native/philomena/mediaproc_client/src/: main.rs
native/philomena/mediaproc_server/: Cargo.toml
native/philomena/mediaproc_server/src/: command_server.rs  dinov2.rs  io.rs  main.rs  signal.rs
native/philomena/src/: asyncnif.rs  camo.rs  domains.rs  lib.rs  markdown.rs  markdown_diff.rs  remote.rs  tests.rs
scripts/: dev.sh  init.sh  lib.sh  philomena.sh  shellcheck.sh
test/: CONVENTIONS.md  route_coverage.txt  test_helper.exs
web3/: README.md  client.side.config.js  config.ex  donate.md
(+1681 files in other folders)
