[package]
name = "mediaproc_server"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
mediaproc = { path = "../mediaproc" }
tarpc = { version = "0.35", features = ["full"] }
tempfile = "3"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
