[package]
name = "mediaproc_server"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
image = { version = "0.25.2", default-features = false, features = ["jpeg", "png"] }
mediaproc = { path = "../mediaproc" }
tarpc = { version = "0.35", features = ["full"] }
tch = { version = "0.18.1", features = ["download-libtorch"] }
tempfile = "3"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
